Jight over nohn please do something for teamgit push!

--- a/flask/app/templates/edit.html
+++ b/flask/app/templates/edit.html
@@ -111,11 +111,11 @@
             <div class="form-group">
                 <label for="qr-size" id="qr-label-size">Size:</label>
                 <select id="qr-size" class="modal-select">
-                    <option value="L">L (10cm)</option>
-                    <option value="M" selected>M (8cm)</option>
-                    <option value="S">S (5cm)</option>
-                    <option value="XS">XS (3cm)</option>
-                    <option value="XXS">XXS (2cm)</option>
+                    <option value="L">L (10cm x 10cm)</option>
+                    <option value="M" selected>M (8cm x 8cm)</option>
+                    <option value="S">S (5cm x 5cm)</option>
+                    <option value="XS">XS (3cm x 3cm)</option>
+                    <option value="XXS">XXS (2cm x 2cm)</option>
                 </select>
             </div>
             <div class="form-group">
