--- a/flask/app/templates/home.html
+++ b/flask/app/templates/home.html
@@ -90,7 +90,7 @@
     </div>
 
     <div class="topfive">
-        <span id="topFive">Top 5 Disbursemented Items</span>
+        <span id="topFive">Top 5 Disbursemed Items</span>
     </div>
     <form method="POST">
         <div class="show_select_delta">
@@ -258,7 +258,7 @@
             hist: "History",
             addItem: "Add",
             settings: "Settings",
-            topFive: "Top 5 Disbursemented Items",
+            topFive: "Top 5 Disbursed Items",
             inStock: "In stock: ",
             withdrawn: "Withdrawn: ",
             withdraw: "Withdraw",
