now when we delete item a picture will delete to

--- a/flask/app/templates/pending_user.html
+++ b/flask/app/templates/pending_user.html
@@ -24,7 +24,7 @@
         });
     </script>
     <div class="header">
-        <a href="{{ url_for('adminlist') }}" class="back-btn"><i class="material-icons">arrow_back_ios</i></a>
+        <a href="{{ url_for('manage_user') }}" class="back-btn"><i class="material-icons">arrow_back_ios</i></a>
         <h1 class="page-title" id="title">Pending user</h1>
     </div>
     {% with messages = get_flashed_messages() %}
