--- a/flask/app/templates/manage_user.html
+++ b/flask/app/templates/manage_user.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no">
     <meta name="csrf-token" content="{{ csrf_token() }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/adminlist.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/manage_user.css') }}">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Admin List</title>
@@ -74,7 +74,7 @@
                         </div>
                         
                         {% if not user.is_sadmin and current_user.UserID != user.UserID and current_user.is_sadmin %}
-                            <form method="post" action="{{ url_for('adminlist') }}" class="toggle-form">
+                            <form method="post" action="{{ url_for('manage_user') }}" class="toggle-form">
                                 <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                                 <input type="hidden" name="user_id" value="{{ user.UserID }}">
                                 <label class="switch">
@@ -90,7 +90,7 @@
                     
                     {% if not user.is_sadmin and current_user.UserID != user.UserID and current_user.is_sadmin %}
                         <div class="delete-action">
-                            <form method="POST" action="{{ url_for('adminlist') }}">  <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+                            <form method="POST" action="{{ url_for('manage_user') }}">  <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                                 <input type="hidden" name="user_id" value="{{ user.UserID }}">
                                 <input type="hidden" name="action" value="delete">
                                 <button type="submit" class="delete-btn" data-user-name="{{ user.Fname }} {{ user.Lname }}">
