--- a/flask/app/static/css/home.css
+++ b/flask/app/static/css/home.css
@@ -131,9 +131,10 @@ svg {
   align-items: center;
   justify-content: center;
   overflow: hidden;
+  font-weight: bold;
 }
 
-.profile-img {
+.profile-circle img {
   width: 100%;
   height: 100%;
   object-fit: cover; 
